--- a/ASAP_v2.ipynb
+++ b/ASAP_v2.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 30,
    "metadata": {
     "scrolled": false
    },
@@ -88,7 +88,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "228691b568954a33b3675f7118d36efc",
+       "model_id": "6bb0eed666584ad7a4d5e51a15169278",
        "version_major": 2,
        "version_minor": 0
       },
@@ -103,7 +103,7 @@
    "source": [
     "import importlib\n",
     "import asap_main\n",
-    "# Change in mymodule\n",
+    "# Change in mymodulea\n",
     "importlib.reload(asap_main)\n",
     "\n",
     "\n",
@@ -779,7 +779,7 @@
     "from random import randint\n",
     "#Step 1: Connect to MongoDB - Note: Change connection string as needed\n",
     "\n",
-    "client = MongoClient(\"mongodb+srv://fgimbert:sRwqoqKWnLAqbWFX@cluster0-cysy3.gcp.mongodb.net/test?retryWrites=true&w=majority\")\n",
+    "client = MongoClient(\"mongodb+srv://fgimbert:Ph1s1que@cluster0-cysy3.gcp.mongodb.net/test?retryWrites=true&w=majority\")\n",
     "\n",
     "db=client.business\n",
     "#Step 2: Create sample data\n",
@@ -872,6 +872,197 @@
     "UpdatedDocument = db.reviews.find_one({'_id':ASingleReview.get('_id')})\n",
     "print('The updated document:')\n",
     "pprint(UpdatedDocument)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "from random import randint\n",
+    "#Step 1: Connect to MongoDB - Note: Change connection string as needed\n",
+    "\n",
+    "client = MongoClient(\"mongodb+srv://fgimbert:Ph1s1que@cluster0-cysy3.gcp.mongodb.net/test?retryWrites=true&w=majority\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db=client.business\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Database(MongoClient(host=['cluster0-shard-00-00-cysy3.gcp.mongodb.net:27017', 'cluster0-shard-00-02-cysy3.gcp.mongodb.net:27017', 'cluster0-shard-00-01-cysy3.gcp.mongodb.net:27017'], document_class=dict, tz_aware=False, connect=True, retrywrites=True, w='majority', authsource='admin', replicaset='Cluster0-shard-0', ssl=True), 'business')"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymatgen import Structure, Lattice, MPRester, Molecule\n",
+    "from pymatgen.analysis.adsorption import *\n",
+    "from pymatgen.core.surface import generate_all_slabs\n",
+    "from pymatgen.symmetry.analyzer import SpacegroupAnalyzer\n",
+    "from matplotlib import pyplot as plt\n",
+    "%matplotlib inline\n",
+    "# Note that you must provide your own API Key, which can\n",
+    "# be accessed via the Dashboard at materialsproject.org\n",
+    "mpr = MPRester('4oBTKz0pkFSg9EUQ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " /home/fgimbert/anaconda3/envs/mlenv/lib/python3.7/site-packages/pymongo-3.10.1-py3.7-linux-x86_64.egg/pymongo/mongo_client.py:644: DeprecationWarning:Option 'ssl_ca_certs' is deprecated, use 'tlsCAFile' instead.\n",
+      " /home/fgimbert/anaconda3/envs/mlenv/lib/python3.7/site-packages/pymongo-3.10.1-py3.7-linux-x86_64.egg/pymongo/mongo_client.py:644: DeprecationWarning:Option 'ssl_pem_passphrase' is deprecated, use 'tlsCertificateKeyFilePassword' instead.\n",
+      " /home/fgimbert/anaconda3/envs/mlenv/lib/python3.7/site-packages/FireWorks-1.9.5-py3.7.egg/fireworks/core/launchpad.py:319: DeprecationWarning:count is deprecated. Use estimated_document_count or count_documents instead. Please note that $where must be replaced by $expr, $near must be replaced by $geoWithin with $center, and $nearSphere must be replaced by $geoWithin with $centerSphere\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-80-0c559bf36e21>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mfireworks\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLaunchPad\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mlpad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLaunchPad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mlpad\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrequire_password\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0matomate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvasp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mworkflows\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madsorption\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_wf_surface\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mget_wf_surface_all_slabs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/mlenv/lib/python3.7/site-packages/FireWorks-1.9.5-py3.7.egg/fireworks/core/launchpad.py\u001b[0m in \u001b[0;36mreset\u001b[0;34m(self, password, require_password, max_reset_wo_password)\u001b[0m\n\u001b[1;32m    317\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    318\u001b[0m         if password == m_password or (\n\u001b[0;32m--> 319\u001b[0;31m                 not require_password and self.workflows.count() <= max_reset_wo_password):\n\u001b[0m\u001b[1;32m    320\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfireworks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdelete_many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    321\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlaunches\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdelete_many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/mlenv/lib/python3.7/site-packages/pymongo-3.10.1-py3.7-linux-x86_64.egg/pymongo/collection.py\u001b[0m in \u001b[0;36mcount\u001b[0;34m(self, filter, session, **kwargs)\u001b[0m\n\u001b[1;32m   1798\u001b[0m         \u001b[0mcollation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalidate_collation_or_none\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'collation'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1799\u001b[0m         \u001b[0mcmd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1800\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_count\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcmd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcollation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msession\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1801\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1802\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mcreate_indexes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindexes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msession\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/mlenv/lib/python3.7/site-packages/pymongo-3.10.1-py3.7-linux-x86_64.egg/pymongo/collection.py\u001b[0m in \u001b[0;36m_count\u001b[0;34m(self, cmd, collation, session)\u001b[0m\n\u001b[1;32m   1598\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1599\u001b[0m         return self.__database.client._retryable_read(\n\u001b[0;32m-> 1600\u001b[0;31m             _cmd, self._read_preference_for(session), session)\n\u001b[0m\u001b[1;32m   1601\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1602\u001b[0m     def _aggregate_one_result(\n",
+      "\u001b[0;32m~/anaconda3/envs/mlenv/lib/python3.7/site-packages/pymongo-3.10.1-py3.7-linux-x86_64.egg/pymongo/mongo_client.py\u001b[0m in \u001b[0;36m_retryable_read\u001b[0;34m(self, func, read_pref, session, address, retryable, exhaust)\u001b[0m\n\u001b[1;32m   1452\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1453\u001b[0m                 server = self._select_server(\n\u001b[0;32m-> 1454\u001b[0;31m                     read_pref, session, address=address)\n\u001b[0m\u001b[1;32m   1455\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mserver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdescription\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mretryable_reads_supported\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1456\u001b[0m                     \u001b[0mretryable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/mlenv/lib/python3.7/site-packages/pymongo-3.10.1-py3.7-linux-x86_64.egg/pymongo/mongo_client.py\u001b[0m in \u001b[0;36m_select_server\u001b[0;34m(self, server_selector, session, address)\u001b[0m\n\u001b[1;32m   1251\u001b[0m                                         % address)\n\u001b[1;32m   1252\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1253\u001b[0;31m                 \u001b[0mserver\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtopology\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect_server\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mserver_selector\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1254\u001b[0m                 \u001b[0;31m# Pin this session to the selected server if it's performing a\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1255\u001b[0m                 \u001b[0;31m# sharded transaction.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/mlenv/lib/python3.7/site-packages/pymongo-3.10.1-py3.7-linux-x86_64.egg/pymongo/topology.py\u001b[0m in \u001b[0;36mselect_server\u001b[0;34m(self, selector, server_selection_timeout, address)\u001b[0m\n\u001b[1;32m    233\u001b[0m         return random.choice(self.select_servers(selector,\n\u001b[1;32m    234\u001b[0m                                                  \u001b[0mserver_selection_timeout\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 235\u001b[0;31m                                                  address))\n\u001b[0m\u001b[1;32m    236\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    237\u001b[0m     def select_server_by_address(self, address,\n",
+      "\u001b[0;32m~/anaconda3/envs/mlenv/lib/python3.7/site-packages/pymongo-3.10.1-py3.7-linux-x86_64.egg/pymongo/topology.py\u001b[0m in \u001b[0;36mselect_servers\u001b[0;34m(self, selector, server_selection_timeout, address)\u001b[0m\n\u001b[1;32m    191\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_lock\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    192\u001b[0m             server_descriptions = self._select_servers_loop(\n\u001b[0;32m--> 193\u001b[0;31m                 selector, server_timeout, address)\n\u001b[0m\u001b[1;32m    194\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    195\u001b[0m             return [self.get_server_by_address(sd.address)\n",
+      "\u001b[0;32m~/anaconda3/envs/mlenv/lib/python3.7/site-packages/pymongo-3.10.1-py3.7-linux-x86_64.egg/pymongo/topology.py\u001b[0m in \u001b[0;36m_select_servers_loop\u001b[0;34m(self, selector, timeout, address)\u001b[0m\n\u001b[1;32m    216\u001b[0m             \u001b[0;31m# came after our most recent apply_selector call, since we've\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    217\u001b[0m             \u001b[0;31m# held the lock until now.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 218\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_condition\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommon\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMIN_HEARTBEAT_INTERVAL\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    219\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_description\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheck_compatible\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m             \u001b[0mnow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_time\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/mlenv/lib/python3.7/threading.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    298\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    299\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mtimeout\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 300\u001b[0;31m                     \u001b[0mgotit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwaiter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0macquire\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    301\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    302\u001b[0m                     \u001b[0mgotit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwaiter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0macquire\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "from pymatgen import Structure, Lattice, MPRester, Molecule\n",
+    "from pymatgen.analysis.adsorption import *\n",
+    "from pymatgen.core.surface import generate_all_slabs\n",
+    "from pymatgen.symmetry.analyzer import SpacegroupAnalyzer\n",
+    "from matplotlib import pyplot as plt\n",
+    "%matplotlib inline\n",
+    "# Note that you must provide your own API Key, which can\n",
+    "# be accessed via the Dashboard at materialsproject.org\n",
+    "mpr = MPRester('4oBTKz0pkFSg9EUQ')\n",
+    "\n",
+    "from fireworks import LaunchPad\n",
+    "lpad = LaunchPad()\n",
+    "lpad.reset('', require_password=False)\n",
+    "\n",
+    "from atomate.vasp.workflows.base.adsorption import get_wf_surface, get_wf_surface_all_slabs\n",
+    "\n",
+    "struct = mpr.get_structure_by_material_id(\"mp-23\") # fcc Ni\n",
+    "struct = SpacegroupAnalyzer(struct).get_conventional_standard_structure()\n",
+    "slabs = generate_all_slabs(struct, 1, 5.0, 2.0, center_slab=True)\n",
+    "slab_dict = {slab.miller_index:slab for slab in slabs}\n",
+    "\n",
+    "ni_slab_111 = slab_dict[(1, 1, 1)]\n",
+    "wf = get_wf_surface([ni_slab_111])\n",
+    "lpad.add_wf(wf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Structure Summary\n",
+       "Lattice\n",
+       "    abc : 2.4748737341529163 2.474873734152917 18.186533479473212\n",
+       " angles : 90.0 90.0 120.00000000000001\n",
+       " volume : 96.46875\n",
+       "      A : 2.4748737341529163 0.0 1.5154230984121132e-16\n",
+       "      B : -1.237436867076459 2.1433035249352805 1.5154230984121132e-16\n",
+       "      C : 0.0 0.0 18.186533479473212\n",
+       "PeriodicSite: Ni (1.2374, 0.7144, 1.0104) [0.6667, 0.3333, 0.0556]\n",
+       "PeriodicSite: Ni (1.2374, 2.1433, 3.0311) [1.0000, 1.0000, 0.1667]\n",
+       "PeriodicSite: Ni (-0.0000, 1.4289, 5.0518) [0.3333, 0.6667, 0.2778]\n",
+       "PeriodicSite: Ni (1.2374, 0.7144, 7.0725) [0.6667, 0.3333, 0.3889]"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ni_111"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Structure Summary\n",
+       "Lattice\n",
+       "    abc : 2.4805562858138064 2.480556285813807 8.227074471401986\n",
+       " angles : 81.32927859862012 81.32927859862012 60.00000000000001\n",
+       " volume : 43.171014193088894\n",
+       "      A : 2.452206140048768 0.0 0.373957930518272\n",
+       "      B : 1.1975890451400957 2.1398821070921907 0.37395793051827203\n",
+       "      C : 0.0 0.0 8.227074471401986\n",
+       "PeriodicSite: Ni (0.9124, 0.5350, 2.2437) [0.2500, 0.2500, 0.2500]\n",
+       "PeriodicSite: Ni (1.8249, 1.0699, 4.4875) [0.5000, 0.5000, 0.5000]\n",
+       "PeriodicSite: Ni (2.7373, 1.6049, 6.7312) [0.7500, 0.7500, 0.7500]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ni_slab_111"
    ]
   },
   {
